--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en-US">
     <head>
         <meta charset="UTF-8">
-        <meta http-equiv="refresh" content="1;url=doc/">
+        <meta http-equiv="refresh" content="1;url=http://Enerccio.github.io/ParaLang/doc/">
         <script type="text/javascript">
             window.location.href = "http://Enerccio.github.io/ParaLang/doc/"
         </script>
